# rscp2p-backend

./: .dockerignore  .env.example  .gitignore  ANALISIS-COBERTURA-API.md  ANALISIS-PRODUCCION.md  API-DOCUMENTATION-FRONTEND.md  API-QUICK-REFERENCE.md  ARQUITECTURA-P2P.md  CHECKLIST-PRODUCCION-FINAL.md  CHECKLIST-PRODUCCION-SIN-BLOCKCHAIN.md  COMANDO-PARA-SERVIDOR.txt  COMANDOS-RAPIDOS-DB.md  Cargo.toml  Dockerfile  GUIA-CONFIGURACION-DB.md  INSTALAR-DOCKER-AHORA.md  INSTALL-DOCKER.md  LOGS-DIGITALOCEAN.md  MEJORAS-FINALES-PRODUCCION.md  MEJORAS-IMPLEMENTADAS.md  README.md  RESUMEN-INSTALACION.md  SECURITY.md  SETUP.md  SOLUCION-FRONTEND-CONEXION.md  SOLUCION-SIN-DOCKER.md  SOLUCIONAR-CORS.md  SUBIR-SCRIPTS.md  VARIABLES-ENTORNO-PRODUCCION.md  alembic.ini  conectar-git.sh  crear-script-en-servidor.sh  docker-compose.yml  instalar-redis.sh  install-docker.ps1  install.ps1  lib.rs  package-lock.json  package.json  push.ps1  (+15 more)
.github/workflows/: guard-secrets.yml
alembic/: env.py
alembic/versions/: 001_marketplace_orders_escrows_disputes_users.py  002_domain_events.py  003_idempotency_keys.py  004_order_escrow_status_rename.py  005_outbox_events.py  006_order_escrow_consistency.py  007_ledger_entries.py  008_deposit_events.py  009_idempotency_order_mutations.py  010_launchpad_watchlist_chat.py  011_production_constraints_auth_nonces.py  012_launchpad_submissions_extended.py  013_alerts_table.py  014_presale_status_column.py
app/: __init__.py  config.py  db.py  main.py  redis.py
app/api/: __init__.py  deps.py
app/domain/: __init__.py  escrow_value_object.py  ledger.py  order_aggregate.py  order_domain_events.py  order_state_machine.py
app/launchpad/: __init__.py  models.py  routes.py  schemas.py  seed.py  service.py
app/models/: __init__.py  alerts.py  auth_nonces.py  deposit_events.py  domain_events.py  idempotency.py  marketplace.py  outbox.py
app/repositories/: __init__.py  order_repository.py
app/schemas/: __init__.py  alert.py  auth.py  common.py  deposit.py  escrow.py  market.py  order.py  users.py  wallet_tokens.py
app/services/: __init__.py  alerts.py  auth.py  chain_verifier.py  deposit_processor.py  domain_events.py  escrow.py  idempotency_service.py  ledger_service.py  market.py  orders.py  outbox_worker.py  users.py  wallet_tokens.py
app/utils/: eip191_verify.py  resilience.py
app/websocket/: __init__.py  socketio.py
cmd/: main.rs
docker/: Dockerfile  Makefile  docker-compose.prod.yml  docker-compose.yml
docker/digitalocean/: app-spec.example.yaml
docker/k8s/: certificate-staging.yaml  certificate-wildcard-digitalocean.yaml  certificate-wildcard-staging.yaml  certificate-wildcard.yaml  certificate.yaml  configmap.yaml  deployment.yaml  hpa.yaml  ingress-staging.yaml  ingress-wildcard.yaml  ingress.yaml  namespace.yaml  secret.example.yaml  service.yaml
docker/nginx/: nginx.conf
docs/: AUDITORIA_DDD_ORDER_ESCROW.md  AUDITORIA_ORDER_STATE_MACHINE.md  AUDIT_PAYMENT_ARCHITECTURE.md  CONCURRENCY_STRESS_TEST.md  DEPOSIT_PIPELINE.md  DOMAIN_EVENT_LOG.md  IDEMPOTENCY_ORDER_MUTATIONS.md  LAUNCHPAD_BACKEND_CHECKLIST.md  MARKETPLACE_DOMAIN_MODEL.md  ORDER_AGGREGATE_DESIGN.md  ORDER_FSM_DESIGN.md  UI_BACKEND_INTEGRATION_ANALYSIS.md
internal/: mod.rs
internal/auth/: error.rs  extractor.rs  jwt_keys.rs  mfa.rs  mod.rs  password_policy.rs  session_store.rs
internal/blockchain/: error.rs  mod.rs
internal/config/: auth.rs  blockchain.rs  database.rs  env.rs  error.rs  features.rs  mod.rs  observability.rs  secrets.rs  server.rs  threat_intel.rs  workers.rs
internal/core/: mod.rs
internal/database/: connection.rs  error.rs  helpers.rs  migrations.rs  mod.rs  transaction.rs
internal/logging/: mod.rs
internal/middleware/: auth.rs  cors.rs  logging.rs  mod.rs  rate_limit.rs  request_id.rs  require_role.rs
internal/observability/: business.rs  health.rs  metrics.rs  middleware.rs  mod.rs  telemetry.rs
internal/payments/: error.rs  mod.rs
internal/providers/: error.rs  handlers.rs  mod.rs  models.rs  repository.rs  service.rs  tests.rs  traits.rs
internal/redis/: mod.rs
internal/security/: client_ip.rs  encryption.rs  mod.rs  signature.rs
internal/state/: mod.rs
migrations/: 001_create_users.sql  002_auth_production.sql  003_user_profile.sql  004_user_production_hardening.sql  005_wallets_core.sql  006_wallets_financial_hardening.sql  007_withdrawals.sql  008_payments_core.sql  009_payment_wallet_link.sql  010_fiat_conversions.sql  011_settlement_wallet_liquidation.sql  012_swaps_core.sql  013_security_events.sql  014_user_roles.sql  015_worker_dead_letters.sql  016_banking_financial_gateway.sql
routes/: auth.rs  banking.rs  blockchain.rs  mod.rs  payments.rs  swaps.rs  users.rs  wallet.rs
scripts/: check-no-env-committed.ps1  check-no-env-committed.sh
src/: app.module.ts  main.ts
tests/: e2e_common.rs  payments_e2e.rs  test_deposit_processor.py  test_idempotency_orders.py  test_ledger.py  test_order_aggregate.py  test_order_state_machine.py  test_users.py
(+264 files in other folders)
